jQuery fadeOut effects

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<!-- Optional theme -->
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-			<link href="custom.css" rel="stylesheet" media="screen">
+			<link href="style.css" rel="stylesheet" media="screen">
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   			
   			<meta name="author" content="teoespero">
@@ -39,8 +39,26 @@
 		    <![endif]-->
 	</head>
 	<body>
-		<div class="container">
-			
+		<div class="container padded">
+			<div class="pDiv">
+				<p>
+					Twee banjo man braid 3 wolf moon adaptogen blog chambray subway tile unicorn copper mug man bun. Health goth mustache YOLO you probably haven't heard of them pork belly chia la croix ennui freegan snackwave sriracha. Direct trade you probably haven't heard of them blog, retro cold-pressed succulents pickled organic intelligentsia air plant microdosing. Polaroid locavore fixie cray raw denim man braid pug listicle air plant put a bird on it kickstarter. Master cleanse franzen jianbing yr vaporware cornhole. Cloud bread tofu art party letterpress stumptown edison bulb. Cliche hella meh, put a bird on it jianbing taxidermy venmo marfa migas kinfolk PBR&B vinyl.
+				</p>
+			</div>
+			<div class="pDiv">
+				<p>
+					XOXO PBR&B organic farm-to-table meh leggings squid tbh, chartreuse shabby chic. Literally mlkshk gochujang, 90's pour-over prism umami. Copper mug knausgaard fanny pack, kitsch franzen microdosing sustainable keytar flexitarian narwhal chartreuse VHS. Lomo everyday carry XOXO tote bag salvia shaman. Echo park raclette locavore squid lomo. Blog unicorn heirloom typewriter banh mi, hell of letterpress YOLO activated charcoal keffiyeh dreamcatcher seitan photo booth.
+				</p>
+			</div>
+			<div class="pDiv">
+				<p>
+					Lorem ipsum dolor amet ennui chicharrones 8-bit irony fashion axe humblebrag food truck scenester godard tattooed. VHS yuccie occupy, roof party activated charcoal glossier readymade tote bag +1 vape pop-up selfies gastropub farm-to-table 8-bit. Aesthetic organic street art synth tofu snackwave. Art party sustainable authentic blue bottle offal viral. Keytar coloring book tumeric umami brooklyn.
+				</p>
+			</div>
+			<br><br>
+			<div class="text-center padded">
+				<button class="btn btn-default btn-lg btn-space" id="clickMe">Click Me</button>
+			</div>
 		</div>
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
