final commit: added refinements to the code

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		    <![endif]-->
 	</head>
 	<body>
-		<div class="container padded">
+		<div class="container haba">
+			<h1 class="text-center">jQuery Effects</h1>
 			<div class="pDiv">
 				<p>
 					Twee banjo man braid 3 wolf moon adaptogen blog chambray subway tile unicorn copper mug man bun. Health goth mustache YOLO you probably haven't heard of them pork belly chia la croix ennui freegan snackwave sriracha. Direct trade you probably haven't heard of them blog, retro cold-pressed succulents pickled organic intelligentsia air plant microdosing. Polaroid locavore fixie cray raw denim man braid pug listicle air plant put a bird on it kickstarter. Master cleanse franzen jianbing yr vaporware cornhole. Cloud bread tofu art party letterpress stumptown edison bulb. Cliche hella meh, put a bird on it jianbing taxidermy venmo marfa migas kinfolk PBR&B vinyl.
@@ -56,9 +57,23 @@
 				</p>
 			</div>
 			<br><br>
-			<div class="text-center padded">
-				<button class="btn btn-default btn-lg btn-space" id="clickMe">Click Me</button>
+			<div class="text-center">
+				<button class="btn btn-default btn-lg btn-space" id="fadingEffect">Toggle FadeIn/FadeOut</button>
+				<button class="btn btn-default btn-lg btn-space" id="SlideDown">SlideDown</button>
+				<button class="btn btn-default btn-lg btn-space" id="SlideUp">SlideUp</button>
+				<button class="btn btn-default btn-lg btn-space" id="SlideToggle">SlideToggle</button>
 			</div>
+			<footer>
+				<hr>
+				<h6 class="text-center">
+					<small>
+						&copy; Copyright 2018 Web Dev Bootcamp<br><br>
+						Teodulfo Espero<br>
+						BS Cloud and Systems Administration<br>
+						Western Governors University<br>
+					</small>
+				</h6>
+			</footer>
 		</div>
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
